package system.controller;

public class Const {

    public static final String RESULT_KEY = "result";
    public static final String ERROR_KEY = "error";

    public static final String OK_RESULT = "ok";
    public static final String NOK_RESULT = "nok";
    public static final String OBJECTS_KEY = "objects";
    public static final String NEW_ID_KEY = "newId";
    public static final String NOT_FOUND_RESULT = "not found";

    public static final String OBJECT_KEY = "object";
    public static final String PLAYER_KEY = "player";
    public static final String PLAYER_IDS_KEY = "player_ids";
    public static final String PLAYER_NAMES_KEY = "player_names";
    public static final String GAME_KEY = "game";

    public static final String WRONG_TEACHER_ID = "wrong teacher id";
    public static final String LONG_POLL_KEY = "longpoll";
    public static final String REPEAT_LONG_POLL = "REPEAT_LONG_POLL";
    public static final String FULL_TIME_KEY = "full_time";
    public static final String NAME_KEY = "name";
    public static final String SERVER_TIME = "server_time";
    public static final String START_TIME_KEY = "start_time";
    public static final String TIME_LEFT_KEY = "time_left";
    public static final String TEACHER_ID_KEY = "id";
    public static final String TEACHER_TYPE_KEY = "type";

    public static final double FREE_TEXT_ANSWER_CORRECTNESS = -0.12345;


    public static final String JS_FILES_PATH = "/WEB-INF/static/html/js";
    public static final String DEFAULT_SERVER_ADDRESS = "127.0.0.1:80";
    public static final String REPLACEMENT_SERVER_ADDRESS = "127.0.0.1:80";

    public static final String SETTINGS_FILE_LOCATION = "C:/settings.txt";

    public static final String USER_EXISTS_ERROR = "user_exists";

}
