@startuml

title __CONTROLLER's Class Diagram__\n

  package system.controller {
    class Const {
        {static} + RESULT_KEY : String
        {static} + ERROR_KEY : String
        {static} + OK_RESULT : String
        {static} + NOK_RESULT : String
        {static} + OBJECTS_KEY : String
        {static} + NEW_ID_KEY : String
        {static} + NOT_FOUND_RESULT : String
        {static} + OBJECT_KEY : String
        {static} + PLAYER_KEY : String
        {static} + PLAYER_IDS_KEY : String
        {static} + PLAYER_NAMES_KEY : String
        {static} + GAME_KEY : String
        {static} + WRONG_TEACHER_ID : String
        {static} + LONG_POLL_KEY : String
        {static} + REPEAT_LONG_POLL : String
        {static} + FULL_TIME_KEY : String
        {static} + NAME_KEY : String
        {static} + SERVER_TIME : String
        {static} + START_TIME_KEY : String
        {static} + TIME_LEFT_KEY : String
        {static} + TEACHER_ID_KEY : String
        {static} + TEACHER_TYPE_KEY : String
        {static} + FREE_TEXT_ANSWER_CORRECTNESS : double
        {static} + JS_FILES_PATH : String
        {static} + DEFAULT_SERVER_ADDRESS : String
        {static} + REPLACEMENT_SERVER_ADDRESS : String
        {static} + SETTINGS_FILE_LOCATION : String
        {static} + USER_EXISTS_ERROR : String
    }
  }
  

  package system.controller {
    class GameController {
        {static} + MAX_WAITING_FOR_GAME_START_TIME : int
        {static} + GAME_START_CHECK_DELAY : int
        {static} + MAX_WAITING_TIME_FOR_PLAYER_JOIN : int
        + add()
        + waitForGameStart()
        + getGameInfo()
        + waitForPlayerJoin()
        + answerQuestion()
        + setFullTime()
        + startGame()
        + endGame()
        + get()
        + getByCode()
        + getAll()
        + add()
        + remove()
    }
  }
  

  package system.controller {
    class QuestionController {
        + get()
        + getAll()
        + getAllWithCanNames()
        + add()
        + remove()
        + edit()
    }
  }
  

  package system.controller {
    class QuestionGroupController {
        + getAll()
        + getAllWithNumberOfQuestions()
        + add()
        + remove()
        + edit()
        + rename()
    }
  }
  

  package system.controller {
    class QuizController {
        + getWithQuiz()
        + get()
        + getAll()
        + getAllWithCanNames()
        + getQuestionsFromQuiz()
        + add()
        + copy()
        + remove()
        + edit()
    }
  }
  

  package system.controller {
    class QuizGroupController {
        + getAll()
        + add()
        + remove()
        + edit()
        + rename()
    }
  }
  

  package system.controller {
    class QuizPartController {
        + get()
        + getAllWithCatNames()
        + getAll()
        + add()
        + add()
        + remove()
        + edit()
    }
  }
  

  package system.controller {
    class ResultController {
        + getAll()
        + add()
        + grade()
        + remove()
        + edit()
    }
  }
  

  package system.controller {
    class SiteController {
        {static} - FILES_LOCATION : String
        + getIndex()
        + getFile()
        + getResource()
        + getFavicon()
    }
  }
  

  package system.controller {
    class UserController {
        + verify()
        + getAll()
        + getByLogin()
        + getById()
        + add()
        + remove()
        + edit()
        + copy()
    }
  }
  

  GameController o-- GameService : service
  GameController o-- PlayerService : playerService
  GameController o-- QuizService : quizService
  QuestionController o-- QuestionService : service
  QuestionGroupController o-- QuestionGroupService : service
  QuizController o-- QuizService : service
  QuizGroupController o-- QuizGroupService : service
  QuizPartController o-- QuizPartService : service
  ResultController o-- ResultService : service
  UserController o-- UserService : service


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
